Add chat history-aware AI prompt upgrade